Flip product name text to read from outside the label card

--- a/inventory/templates/inventory/variants/product_label_card.html
+++ b/inventory/templates/inventory/variants/product_label_card.html
@@ -194,6 +194,7 @@
         .right-edge {
             right: 0.8mm;
             writing-mode: vertical-rl;
+            transform: rotate(180deg); /* Flip to read from outside the card */
         }
 
         .logo-container {
