Fix Product Label Layout: Added final vertical cutting line at 261mm

--- a/inventory/templates/inventory/variants/product_label_card.html
+++ b/inventory/templates/inventory/variants/product_label_card.html
@@ -343,6 +343,7 @@
                             <div class="cut-line-v" style="left: 63mm;"></div>
                             <div class="cut-line-v" style="left: 129mm;"></div>
                             <div class="cut-line-v" style="left: 195mm;"></div>
+                            <div class="cut-line-v" style="left: 261mm;"></div>
                             <div class="cut-line-h" style="top: 101mm;"></div>
                         </div>
                         <div class="grid-container">
@@ -398,6 +399,7 @@
                         <div class="cut-line-v" style="left: 63mm;"></div>
                         <div class="cut-line-v" style="left: 129mm;"></div>
                         <div class="cut-line-v" style="left: 195mm;"></div>
+                        <div class="cut-line-v" style="left: 261mm;"></div>
                         <div class="cut-line-h" style="top: 101mm;"></div>
                     </div>
                     <div class="grid-container">
